--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 }
 .main h1{
 	font-size: 4rem;
-	font-family: "Ponishalphabet2";
+/* 	font-family: "Ponishalphabet2"; */
 }
 .main p{
 	font-size: 2rem;
