--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 @font-face{
 	font-family: "Ponishalphabet2;
-	src: url("Ponishalphabet2.tff");
+	src: url("/Ponishalphabet2.tff/");
 }
 .main{
 	width: 100%;
