--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body{
 	background-size: cover;
 	background-position: bottom;
 }
+@font-face{
+	font-family: "Ponishalphabet2;
+	src: url("/Ponishalphabet2.ttf/");
 .main{
 	width: 100%;
 	height: 1412px;
