--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 @font-face{
 	font-family: "Ponishalphabet2;
-	src: url("Ponishalphabet2.ttf");
+	src: url("https://batmangithuber.github.io/Ponishalphabet2.ttf");
 .main{
 	width: 100%;
 	height: 1412px;
