--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 @font-face{
 	font-family: "Ponishalphabet2;
 	src: url("https://batmangithuber.github.io/Ponishalphabet2.ttf");
+	src: url("https://batmangithuber.github.io/Ponishalphabet2.ttf");
 .main{
 	width: 100%;
 	height: 1412px;
