--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: bottom;
+}
 .main{
 	width: 100%;
 	height: 1412px;
